<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/outline_star_outline_24"
        android:title="@string/favorite"
        app:iconTint="@color/white"
        app:showAsAction="always" />
</menu>