<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/outline_home_24"
            android:id="@+id/devicesListFragment"
            android:title="@string/home" />
        <item
            android:icon="@drawable/outline_phone_iphone_24"
            android:id="@+id/myFavouritesDevicesFragment"
            android:title="@string/my_devices" />
    </group>
</menu>